--- a/docs/config.json
+++ b/docs/config.json
@@ -23,6 +23,12 @@
           "active": true,
           "moved": 0,
           "link": "https://github.com/flaconi/lib-logger"
+        },
+        {
+          "label": "monitoring-service",
+          "active": true,
+          "moved": 0,
+          "link": "https://github.com/Flaconi/monitoring-service"
         }
       ],
       "HOLD": [
