--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
   push:
     branches:
-      #- master
+      - master
 
 permissions:
   contents: read
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Pages ⚙️
         id: pages
         uses: actions/configure-pages@v4
-        #if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         with:
           static_site_generator: next
 
@@ -42,6 +42,7 @@ jobs:
           path: ./build
 
   deploy:
+    if: ${{ github.ref == 'refs/heads/master' }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
