PLT-1074 - Add support for departments (#10)
* adjust existing files to add departments information

--- a/config.json
+++ b/config.json
@@ -8,9 +8,10 @@
     "showChart": true,
     "showTagFilter": true,
     "showQuadrantList": true,
-    "showEmptyRings": false
+    "showEmptyRings": false,
+    "showDepartmentFilter": true
   },
-  "sections": ["radar", "tags", "list"],
+  "sections": ["radar", "tags", "departments", "list"],
   "colors": {
     "foreground": "#E5E8E9",
     "background": "#38464D",
