--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zalando-tech-radar",
+  "name": "Instant-Impact-tech-radar",
   "version": "2024.1.0",
   "description": "Visualizing our technology choices",
   "homepage": "https://github.com/zalando/tech-radar#readme",
