--- a/.github/workflows/uploadstorage.yml
+++ b/.github/workflows/uploadstorage.yml
@@ -4,7 +4,7 @@ on:
     types: [closed]
 jobs:
   deploy:
-    if: github.event.pull_request.merged == true
+    #if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
