--- a/.github/workflows/uploadstorage.yml
+++ b/.github/workflows/uploadstorage.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     types: [closed]
   push:
-    branches: [main]
+    branches: [master]
 jobs:
   deploy:
     #if: github.event.pull_request.merged == true
